05-登陆和注册前台

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="../src/assets/navStyle.less">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -36,7 +35,7 @@
     document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
     }
     </script>
-    <title>比特树校招</title>
+    <title>比&nbsp;特&nbsp;树&nbsp;校&nbsp;招</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
