07-主页面骨架搭建

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
     }
     </script>
-    <title>比&nbsp;特&nbsp;树&nbsp;校&nbsp;招</title>
+    <title>比特树校招</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
